[package]
name = "hello-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.18.0"
borsh = "1.5.1"

[dev-dependencies]
solana-sdk = "2.0.5"
solana-program-test = "=2.0.5"

[lib]
name = "helloworld"
crate-type = ["cdylib"]

[features]
no-entrypoint = []
